--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
       <div class="about-text">
         <p>Hola 👋 Soy <strong>José Chamorro</strong>, kinesiólogo y quiropráctico con más de 10 años de experiencia en rehabilitación musculoesquelética y deportiva.</p>
-        <p>Actualmente me dedico al análisis de datos y Machine Learning aplicados a la salud y biomecánica, combinando ciencia, movimiento y tecnología para crear soluciones basadas en evidencia.</p>
+        <p>Actualmente me encuentro en un proceso de transición hacia el **Health Data Science**, explorando el uso de **análisis de datos**, **Machine Learning** y **Computer Vision** aplicados a la salud y el rendimiento humano.</p>
         <p>Explora mis proyectos y conoce cómo aplico la analítica y la inteligencia artificial en contextos clínicos y deportivos.</p>
       </div>
     </div>
@@ -62,42 +62,57 @@
         </div>
       </div>
     </div>
-  </section>
+<!-- Proyectos de Análisis de Datos -->
+<section id="data-analysis">
+  <h2>Proyectos de Análisis de Datos</h2>
 
-  <!-- Proyectos de Análisis de Datos -->
-  <section id="data-analysis">
-    <h2>Proyectos de Análisis de Datos</h2>
-    <div class="projects-container">
-      
-      <div class="project-card">
-        <h3>Grupos Relacionados a Diagnóstico (GRD)</h3>
-        <p>Análisis exploratorio de los GRD hospitalarios para entender la distribución de casos, complejidad y costos asociados. Procesamiento de datos en Excel y Python.</p>
-        <div class="buttons">
-          <a href="#">Ver Proyecto</a>
-          <a href="#">Código</a>
-        </div>
+  <div class="projects-carousel">
+    <div class="project-card">
+      <h3>Grupos Relacionados a Diagnóstico (GRD)</h3>
+      <p>Análisis exploratorio de los GRD hospitalarios para entender la distribución de casos, complejidad y costos asociados. Procesamiento de datos en Excel y Python.</p>
+      <div class="buttons">
+        <a href="https://joch89.github.io/GRD-Analisis/" target="_blank">Ver Proyecto</a>
+        <a href="https://github.com/joch89/GRD-Analisis" target="_blank">Código</a>
       </div>
-
-      <div class="project-card">
-        <h3>Predicción de Mortalidad Hospitalaria</h3>
-        <p>Desarrollo de modelo predictivo utilizando variables clínicas y demográficas. Incluye preprocesamiento, selección de variables y métricas de desempeño.</p>
-        <div class="buttons">
-          <a href="#">Ver Proyecto</a>
-          <a href="#">Código</a>
-        </div>
-      </div>
-
-      <div class="project-card">
-        <h3>Análisis Postural y Movimiento</h3>
-        <p>Uso de MediaPipe para estimar la postura y calcular ángulos articulares en imágenes, orientado al análisis biomecánico y evaluación funcional.</p>
-        <div class="buttons">
-          <a href="#">Ver Proyecto</a>
-          <a href="#">Código</a>
-        </div>
-      </div>
-
     </div>
-  </section>
+
+    <div class="project-card">
+      <h3>Predicción de Mortalidad Hospitalaria</h3>
+      <p>Desarrollo de modelo predictivo utilizando variables clínicas y demográficas. Incluye preprocesamiento, selección de variables y métricas de desempeño.</p>
+      <div class="buttons">
+        <a href="https://joch89.github.io/Mortalidad-Hospitalaria/" target="_blank">Ver Proyecto</a>
+        <a href="https://github.com/joch89/Mortalidad-Hospitalaria" target="_blank">Código</a>
+      </div>
+    </div>
+
+    <div class="project-card">
+      <h3>Análisis Postural y Movimiento</h3>
+      <p>Uso de MediaPipe para estimar la postura y calcular ángulos articulares en imágenes, orientado al análisis biomecánico y evaluación funcional.</p>
+      <div class="buttons">
+        <a href="https://joch89.github.io/Analisis-Postural/" target="_blank">Ver Proyecto</a>
+        <a href="https://github.com/joch89/Analisis-Postural" target="_blank">Código</a>
+      </div>
+    </div>
+
+    <div class="project-card">
+      <h3>Clasificación de Movimientos con EMG</h3>
+      <p>Proyecto de Machine Learning que clasifica movimientos del antebrazo y mano usando señales electromiográficas (base de datos NINAPRO).</p>
+      <div class="buttons">
+        <a href="https://joch89.github.io/EMG-ML/" target="_blank">Ver Proyecto</a>
+        <a href="https://github.com/joch89/EMG-ML" target="_blank">Código</a>
+      </div>
+    </div>
+
+    <div class="project-card">
+      <h3>Predicción de Cáncer de Mama</h3>
+      <p>Modelo de clasificación supervisado con Scikit-Learn para predecir presencia de cáncer de mama a partir de características de imagen.</p>
+      <div class="buttons">
+        <a href="https://joch89.github.io/Cancer-Mama-ML/" target="_blank">Ver Proyecto</a>
+        <a href="https://github.com/joch89/Cancer-Mama-ML" target="_blank">Código</a>
+      </div>
+    </div>
+  </div>
+</section>
 
   <!-- Footer -->
   <footer>
@@ -106,6 +121,7 @@
 
 </body>
 </html>
+
 
 
 
