--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Header -->
   <header>
     <h1>José Chamorro</h1>
-    <p>Kinesiólogo · Quiropráctico · Ciencia de Datos en Salud</p>
+    <p>Kinesiólogo · Quiropráctico · Análisis y Ciencia de Datos en Salud</p>
   </header>
 
   <!-- Sobre mí -->
@@ -23,8 +23,8 @@
         <img src="https://github.com/joch89.png" alt="Foto de José Chamorro">
       </div>
       <div class="about-text">
-        <p>Hola 👋 Soy <strong>José Chamorro</strong>, kinesiólogo y quiropráctico con más de 10 años de experiencia en rehabilitación musculoesquelética y deportiva.</p>
-        <p>Actualmente me encuentro en un proceso de transición hacia el **Health Data Science**, explorando el uso de **análisis de datos**, **Machine Learning** y **Computer Vision** aplicados a la salud y el rendimiento humano.</p>
+        <p>Hola 👋 Soy <strong>José Chamorro</strong>, kinesiólogo y Quiropráctico con más de 10 años de experiencia en Rehabilitación Musculoesquelética y Deportiva.</p>
+        <p>Actualmente me encuentro en un proceso de transición hacia el <strong>Health Data Science</strong>, explorando el uso de <strong>Análisis de Datos</strong>, <strong>Machine Learning</strong> y <strong>Computer Vision</strong> aplicados a la salud y el rendimiento humano.</p>
         <p>Explora mis proyectos y conoce cómo aplico la analítica y la inteligencia artificial en contextos clínicos y deportivos.</p>
       </div>
     </div>
@@ -34,84 +34,73 @@
   <section id="machine-learning">
     <h2>Proyectos de Machine Learning</h2>
     <div class="projects-container">
-      
+
+      <!-- Proyecto 1 -->
       <div class="project-card">
         <h3>Predicción de Cáncer de Mama</h3>
-        <p>Modelo de clasificación supervisada usando el dataset de cáncer de mama de sklearn. Incluye análisis exploratorio, balanceo de clases y evaluación del modelo.</p>
+        <p><strong>Descripción:</strong> Modelo de clasificación supervisada usando dataset de cáncer de mama de sklearn.</p>
+        <p><strong>Objetivos:</strong> Predecir la presencia de cáncer de mama con precisión y confiabilidad.</p>
+        <p><strong>Tecnologías:</strong> Python, Scikit-Learn, Pandas, Matplotlib</p>
+        <p><strong>Reflexión:</strong> Aprendí sobre balanceo de clases, validación cruzada y cómo interpretar métricas de clasificación.</p>
         <div class="buttons">
-          <a href="#">Ver Proyecto</a>
-          <a href="#">Código</a>
+          <a href="https://joch89.github.io/Prediccion-Cancer-de-mama/" target="_blank">Ver Proyecto</a>
+          <a href="https://github.com/joch89/Prediccion-Cancer-de-mama" target="_blank">Código</a>
         </div>
       </div>
 
+      <!-- Proyecto 2 -->
       <div class="project-card">
-        <h3>Análisis de Patada de Taekwondo</h3>
-        <p>Proyecto de visión por computadora con MediaPipe y OpenCV para detectar y analizar el movimiento durante una patada lateral. Integración con técnicas de Machine Learning.</p>
+        <h3>Análisis de Patada de Costado</h3>
+        <p><strong>Descripción:</strong> Proyecto de visión por computadora con MediaPipe y OpenCV para analizar el movimiento de la patada lateral.</p>
+        <p><strong>Objetivos:</strong> Evaluar la postura, ángulos articulares y mejorar técnica mediante feedback visual.</p>
+        <p><strong>Tecnologías:</strong> Python, MediaPipe, OpenCV, Numpy, Pandas</p>
+        <p><strong>Reflexión:</strong> Aprendí sobre detección de landmarks, análisis cinemático y procesamiento de video en tiempo real.</p>
         <div class="buttons">
-          <a href="#">Ver Proyecto</a>
-          <a href="#">Código</a>
+          <a href="https://joch89.github.io/Analisis-Patada-de-Costado/" target="_blank">Ver Proyecto</a>
+          <a href="https://github.com/joch89/Analisis-Patada-de-Costado" target="_blank">Código</a>
         </div>
       </div>
 
+      <!-- Proyecto 3 -->
       <div class="project-card">
         <h3>Proyecto en Construcción</h3>
-        <p>Nuevo proyecto de Machine Learning en desarrollo. Muy pronto disponible.</p>
+        <p><strong>Descripción:</strong> Nuevo proyecto de Machine Learning en desarrollo.</p>
+        <p><strong>Objetivos:</strong> Muy pronto disponible.</p>
+        <p><strong>Tecnologías:</strong> Por definir</p>
+        <p><strong>Reflexión:</strong> Por definir</p>
         <div class="buttons">
           <a href="#">Próximamente</a>
         </div>
       </div>
-    </div>
-<!-- Proyectos de Análisis de Datos -->
-<section id="data-analysis">
-  <h2>Proyectos de Análisis de Datos</h2>
 
-  <div class="projects-carousel">
-    <div class="project-card">
-      <h3>Grupos Relacionados a Diagnóstico (GRD)</h3>
-      <p>Análisis exploratorio de los GRD hospitalarios para entender la distribución de casos, complejidad y costos asociados. Procesamiento de datos en Excel y Python.</p>
-      <div class="buttons">
-        <a href="https://joch89.github.io/GRD-Analisis/" target="_blank">Ver Proyecto</a>
-        <a href="https://github.com/joch89/GRD-Analisis" target="_blank">Código</a>
-      </div>
     </div>
+  </section>
 
-    <div class="project-card">
-      <h3>Predicción de Mortalidad Hospitalaria</h3>
-      <p>Desarrollo de modelo predictivo utilizando variables clínicas y demográficas. Incluye preprocesamiento, selección de variables y métricas de desempeño.</p>
-      <div class="buttons">
-        <a href="https://joch89.github.io/Mortalidad-Hospitalaria/" target="_blank">Ver Proyecto</a>
-        <a href="https://github.com/joch89/Mortalidad-Hospitalaria" target="_blank">Código</a>
-      </div>
-    </div>
+  <!-- Proyectos de Análisis de Datos -->
+  <section id="data-analysis">
+    <h2>Proyectos de Análisis de Datos</h2>
+    <div class="projects-carousel">
 
-    <div class="project-card">
-      <h3>Análisis Postural y Movimiento</h3>
-      <p>Uso de MediaPipe para estimar la postura y calcular ángulos articulares en imágenes, orientado al análisis biomecánico y evaluación funcional.</p>
-      <div class="buttons">
-        <a href="https://joch89.github.io/Analisis-Postural/" target="_blank">Ver Proyecto</a>
-        <a href="https://github.com/joch89/Analisis-Postural" target="_blank">Código</a>
+      <div class="project-card">
+        <h3>Análisis del Flujo del Paciente</h3>
+        <p>Exploración de datos hospitalarios para optimizar rutas de atención y tiempos de espera.</p>
+        <div class="buttons">
+          <a href="https://joch89.github.io/Analisis-del-Flujo-del-Paciente/" target="_blank">Ver Proyecto</a>
+          <a href="https://github.com/joch89/Analisis-del-Flujo-del-Paciente" target="_blank">Código</a>
+        </div>
       </div>
-    </div>
 
-    <div class="project-card">
-      <h3>Clasificación de Movimientos con EMG</h3>
-      <p>Proyecto de Machine Learning que clasifica movimientos del antebrazo y mano usando señales electromiográficas (base de datos NINAPRO).</p>
-      <div class="buttons">
-        <a href="https://joch89.github.io/EMG-ML/" target="_blank">Ver Proyecto</a>
-        <a href="https://github.com/joch89/EMG-ML" target="_blank">Código</a>
+      <div class="project-card">
+        <h3>EDA en CMBD GRD 2023 FONASA</h3>
+        <p>Análisis exploratorio de los GRD hospitalarios para entender distribución de casos y costos asociados.</p>
+        <div class="buttons">
+          <a href="https://joch89.github.io/EDA-en-CMBD-GRD-2023-FONASA/" target="_blank">Ver Proyecto</a>
+          <a href="https://github.com/joch89/EDA-en-CMBD-GRD-2023-FONASA" target="_blank">Código</a>
+        </div>
       </div>
-    </div>
 
-    <div class="project-card">
-      <h3>Predicción de Cáncer de Mama</h3>
-      <p>Modelo de clasificación supervisado con Scikit-Learn para predecir presencia de cáncer de mama a partir de características de imagen.</p>
-      <div class="buttons">
-        <a href="https://joch89.github.io/Cancer-Mama-ML/" target="_blank">Ver Proyecto</a>
-        <a href="https://github.com/joch89/Cancer-Mama-ML" target="_blank">Código</a>
-      </div>
     </div>
-  </div>
-</section>
+  </section>
 
   <!-- Footer -->
   <footer>
@@ -120,9 +109,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
