--- a/index.html
+++ b/index.html
@@ -30,6 +30,61 @@
     </div>
   </section>
 
+  <!-- Habilidades / Stack Técnico -->
+  <section id="skills">
+    <h2>Habilidades & Stack Técnico</h2>
+    <div class="skills-container">
+      <ul>
+        <li>Python (Pandas, NumPy, Scikit-Learn, Matplotlib)</li>
+        <li>OpenCV, MediaPipe</li>
+        <li>TensorFlow, PyTorch</li>
+        <li>Análisis estadístico y modelado predictivo</li>
+        <li>Análisis de datos clínicos con sistemas GRD</li>
+        <li>Visualización de datos y dashboards</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- Experiencia Laboral -->
+  <section id="experience">
+    <h2>Experiencia Laboral</h2>
+    <div class="experience-container">
+      <ul>
+        <li><strong>Centro Quiropráctico Viña Salud</strong> – Socio Fundador & Kinesiólogo-Quiropráctico Clínico (NOV 2017 – Actualidad)</li>
+        <li><strong>Hospital de Quilpué</strong> – Analista y Codificador GRD (Jun 2024 – MAY 2025)</li>
+        <li><strong>Hospital Biprovincial Quillota-Petorca</strong> – Analista y Codificador GRD (Ene 2023 – MAR 2023)</li>
+        <li><strong>Centro de Salud Alma</strong> – Kinesiólogo & Quiropráctico Clínico (OCT 2023 – Actualidad)</li>
+        <li><strong>Centro Kinesiológico KIVOCS</strong> – CEO & Kinesiólogo Clínico (MAR 2015 – AGO 2017)</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- Educación y Certificaciones -->
+  <section id="education">
+    <h2>Educación & Cursos Principales</h2>
+    <div class="education-container">
+      <ul>
+        <li><strong>MBA con Especialización en Salud</strong> – Universidad Andrés Bello, 2024</li>
+        <li><strong>Quiropráctico</strong> – Universidad Central de Chile, 2017</li>
+        <li><strong>Kinesiólogo</strong> – Universidad Andrés Bello, 2014</li>
+        <li><strong>Diplomado en Emprendimiento y Organización en Salud</strong> – UNAB, 2020</li>
+        <li><strong>Diplomado en Administración y Gestión de Procesos en Organizaciones de Salud</strong> – UNAB, 2020</li>
+        <li><strong>Diplomado en Evaluación y Gestión de Proyectos</strong> – UNAB, 2021</li>
+        <li><strong>Google Data Analytics Professional Certificate</strong> – Coursera / Google, 2022</li>
+        <li><strong>Especialización en Ciencia de Datos</strong> – Bootcamp Kibernum, 2024</li>
+        <li><strong>OpenCV Bootcamp</strong> – OpenCV.org, 2025</li>
+      </ul>
+    </div>
+  </section>
+
+  <!-- CV Descargable -->
+  <section id="cv">
+    <h2>Currículum Vitae</h2>
+    <div class="cv-container" style="text-align:center;">
+      <a href="https://github.com/joch89/Portafolio/blob/main/Curr%C3%ADculum%20Jose%20Chamorro.pdf" target="_blank" class="cv-button">Descargar CV</a>
+    </div>
+  </section>
+
   <!-- Proyectos de Machine Learning -->
   <section id="machine-learning">
     <h2>Proyectos de Machine Learning</h2>
@@ -99,6 +154,16 @@
         </div>
       </div>
 
+    </div>
+  </section>
+
+  <!-- Contacto -->
+  <section id="contact">
+    <h2>Contacto</h2>
+    <div class="contact-container" style="text-align:center; margin-bottom:30px;">
+      <p>Email: <a href="mailto:jm.chamorro.g@gmail.com">jm.chamorro.g@gmail.com</a></p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/josé-chamorro/" target="_blank">José Chamorro</a></p>
+      <p>Instagram: <a href="https://www.instagram.com/[tuusuario]" target="_blank">[Tu usuario]</a></p>
     </div>
   </section>
 
