--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <section id="cv">
     <h2>Currículum Vitae</h2>
     <div class="cv-container" style="text-align:center;">
-      <a href="https://github.com/joch89/Portafolio/blob/main/Curr%C3%ADculum%20Jose%20Chamorro.pdf" target="_blank" class="cv-button">Descargar CV</a>
+      <a href="Currículum Jose Chamorro.pdf" target="_blank" class="cv-button">Descargar CV</a>
     </div>
   </section>
 
@@ -170,4 +170,5 @@
 
 </body>
 </html>
+
 
