--- a/index.html
+++ b/index.html
@@ -101,16 +101,35 @@
 
       <!-- Proyecto 2 -->
       <div class="project-card">
-        <h3>Análisis de Patada de Costado</h3>
-        <p><strong>Descripción:</strong> Proyecto de visión por computadora con MediaPipe y OpenCV para analizar el movimiento de la patada lateral.</p>
-        <p><strong>Objetivos:</strong> Evaluar la postura, ángulos articulares y mejorar técnica mediante feedback visual.</p>
-        <p><strong>Tecnologías:</strong> Python, MediaPipe, OpenCV, Numpy, Pandas</p>
-        <p><strong>Reflexión:</strong> Aprendí sobre detección de landmarks, análisis cinemático y procesamiento de video en tiempo real.</p>
-        <div class="buttons">
-          <a href="https://joch89.github.io/Analisis-Patada-de-Costado/" target="_blank">Ver Proyecto</a>
-          <a href="https://github.com/joch89/Analisis-Patada-de-Costado" target="_blank">Código</a>
-        </div>
-      </div>
+  <h3>Análisis de Patada de Costado</h3>
+  <p><strong>Descripción:</strong> Proyecto de visión por computadora con <strong>MediaPipe</strong> y <strong>OpenCV</strong> para detectar, registrar y analizar el movimiento de una patada de costado (yoko geri) en Taekwondo.</p>
+  
+  <p><strong>Objetivos:</strong></p>
+  <ul>
+    <li>Evaluar la postura y ángulos articulares (cadera, rodilla).</li>
+    <li>Detectar automáticamente inicio y fin de patadas.</li>
+    <li>Generar métricas de velocidad, aceleración y jerk angular.</li>
+    <li>Proporcionar feedback visual inmediato mediante video con métricas superpuestas.</li>
+    <li>Crear un archivo CSV con todos los landmarks y métricas para análisis numérico flexible y extensible.</li>
+  </ul>
+
+  <p><strong>Tecnologías:</strong> Python, MediaPipe (CNN), OpenCV, Numpy, Pandas, Matplotlib, SciPy</p>
+
+  <p><strong>Resultados:</strong></p>
+  <ul>
+    <li>Video procesado con landmarks y contador de patadas.</li>
+    <li>Gráficos de ángulo, velocidad, aceleración y jerk.</li>
+    <li>CSV con métricas de cada patada para análisis comparativo.</li>
+  </ul>
+
+  <p><strong>Reflexión:</strong> Aprendí sobre detección de landmarks, análisis cinemático y procesamiento de video en tiempo real, integrando datos cuantitativos y visuales para mejorar la técnica deportiva.</p>
+
+  <div class="buttons">
+    <a href="https://joch89.github.io/analisis-patada-mediapipe/" target="_blank">Ver Proyecto</a>
+    <a href="https://github.com/joch89/analisis-patada-mediapipe" target="_blank">Código</a>
+  </div>
+</div>
+
 
       <!-- Proyecto 3 -->
       <div class="project-card">
@@ -170,5 +189,6 @@
 
 </body>
 </html>
+
 
 
