--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       <div class="about-photo">
         <img src="https://github.com/joch89.png" alt="Foto de José Chamorro">
       </div>
-      <div class="about-text">
-        <p>Hola 👋 Soy <strong>José Chamorro</strong>, kinesiólogo y Quiropráctico con más de 10 años de experiencia en Rehabilitación Musculoesquelética y Deportiva.</p>
+      <div class="about-text text-justify">
+        <p>Soy <strong>José Chamorro</strong>, kinesiólogo y Quiropráctico con más de 10 años de experiencia en Rehabilitación Musculoesquelética y Deportiva.</p>
         <p>Actualmente me encuentro en un proceso de transición hacia el <strong>Health Data Science</strong>, explorando el uso de <strong>Análisis de Datos</strong>, <strong>Machine Learning</strong> y <strong>Computer Vision</strong> aplicados a la salud y el rendimiento humano.</p>
         <p>Explora mis proyectos y conoce cómo aplico la analítica y la inteligencia artificial en contextos clínicos y deportivos.</p>
       </div>
@@ -191,3 +191,4 @@
 
 </body>
 </html>
+
