--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <div class="projects-container">
 
       <!-- Proyecto 1 -->
-      <div class="project-card">
+      <div class="project-card text-justify">
         <h3>API de Predicción Breast Cancer</h3>
         <p><strong>Descripción:</strong> Modelo de Machine Learning entrenado con el dataset Breast Cancer (Wisconsin) y una API REST en Flask para realizar predicciones. El proyecto está dockerizado y cuenta con un workflow CI/CD en GitHub Actions.</p>
         <p><strong>Objetivos:</strong></p>
@@ -111,7 +111,7 @@
       </div>
 
       <!-- Proyecto 2 -->
-      <div class="project-card">
+      <div class="project-card text-justify">
         <h3>Análisis de Patada de Costado</h3>
         <p><strong>Descripción:</strong> Proyecto de visión por computadora con <strong>MediaPipe</strong> y <strong>OpenCV</strong> para detectar, registrar y analizar el movimiento de una patada de costado (yoko geri) en Taekwondo.</p>
         <p><strong>Objetivos:</strong></p>
@@ -137,7 +137,7 @@
       </div>
 
       <!-- Proyecto 3 -->
-      <div class="project-card">
+      <div class="project-card text-justify">
         <h3>Proyecto en Construcción</h3>
         <p><strong>Descripción:</strong> Nuevo proyecto de Machine Learning en desarrollo.</p>
         <p><strong>Objetivos:</strong> Muy pronto disponible.</p>
@@ -191,4 +191,5 @@
 
 </body>
 </html>
+
 
